feat: Implement core FIX replay functionality including message parsing, comparison, linking, and scenario execution.